Update server and project/data files

--- a/TimelyProject.csproj
+++ b/TimelyProject.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="DBInfo\" />
+    <Folder Include="Timely_FrontEnd\src\services\" />
   </ItemGroup>
 
 </Project>
